--- a/index.html
+++ b/index.html
@@ -1,105 +1,121 @@
 <!DOCTYPE html>
-<!-- Run this file with: python index.html -->
-<script>
-/*
-Note: This file contains a Python Flask app below. Save as index.html and run:
-    python index.html
-It will start a local server and serve the HTML UI.
-
-The HTML UI returned by Flask is defined inside the Python app below.
-*/
+<!--
+Run this file with: python index.html
+It starts a Flask server that serves an image upload form and decodes CAPTCHA text using pytesseract.
+-->
+<script type="text/python">
+# This <script> tag is just a comment wrapper for clarity; the file is a valid Python script.
 </script>
+#!/usr/bin/env python3
 # -*- coding: utf-8 -*-
-import base64
-import io
+
 import os
+import io
+import base64
+
 from flask import Flask, request, render_template_string
-from PIL import Image, ImageOps, ImageFilter
+from PIL import Image, ImageFilter
 import pytesseract
+
+# Optionally allow configuring Tesseract binary path via env var
+# e.g., export TESSERACT_CMD=/usr/local/bin/tesseract
+tesseract_cmd = os.environ.get("TESSERACT_CMD")
+if tesseract_cmd:
+    pytesseract.pytesseract.tesseract_cmd = tesseract_cmd
 
 app = Flask(__name__)
 
-HTML_TEMPLATE = """
+HTML = """
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>CAPTCHA OCR Decoder</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-  :root { color-scheme: light dark; }
-  body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; padding: 2rem; }
-  .container { max-width: 820px; margin: 0 auto; }
-  h1 { font-size: 1.6rem; margin: 0 0 1rem; }
-  p.helper { color: #666; margin-top: 0; }
-  form { border: 1px solid #ccc; border-radius: 10px; padding: 1rem; }
-  .row { display: flex; gap: 1rem; flex-wrap: wrap; align-items: center; }
-  .actions { margin-top: 1rem; display: flex; gap: .75rem; flex-wrap: wrap; }
-  input[type=file] { padding: .5rem; }
-  button { padding: .6rem 1rem; border-radius: 8px; border: 1px solid #888; background: #1a73e8; color: #fff; cursor: pointer; }
-  button.secondary { background: transparent; color: inherit; }
-  .result { margin-top: 1rem; padding: 1rem; border-radius: 10px; background: #f2f6ff; border: 1px solid #cfe0ff; }
-  .result h2 { margin-top: 0; font-size: 1.2rem; }
-  .preview { margin-top: 1rem; display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 1rem; align-items: start; }
-  .card { border: 1px solid #ddd; border-radius: 10px; overflow: hidden; }
-  .card header { padding: .5rem .75rem; font-weight: 600; background: #fafafa; border-bottom: 1px solid #eee; }
-  .card .body { padding: .75rem; }
-  img.preview-img { display: block; max-width: 100%; height: auto; }
-  .error { color: #b00020; margin-top: .75rem; }
-  footer { margin-top: 2rem; color: #777; font-size: .9rem; }
-  code.kbd { padding: .1rem .3rem; border: 1px solid #ccc; border-radius: 4px; background: #f7f7f7; }
-</style>
+  <meta charset="utf-8" />
+  <title>CAPTCHA OCR Decoder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    :root { color-scheme: light dark; }
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      margin: 0; padding: 2rem; line-height: 1.5;
+      background: #0b0c10; color: #e6edf3;
+    }
+    .container {
+      max-width: 900px; margin: 0 auto; background: #11151b; border-radius: 12px;
+      padding: 1.5rem; box-shadow: 0 8px 30px rgba(0,0,0,0.3);
+      border: 1px solid #1f2833;
+    }
+    h1 { margin-top: 0; font-size: 1.6rem; }
+    form {
+      display: flex; gap: .75rem; align-items: center; flex-wrap: wrap;
+      background: #0f141a; padding: 1rem; border-radius: 10px; border: 1px solid #1f2833;
+    }
+    input[type="file"] {
+      padding: .6rem; border-radius: 8px; border: 1px dashed #2b3a4a; background: #0b0f14; color: #c9d1d9;
+    }
+    button {
+      padding: .7rem 1rem; border: 0; border-radius: 8px; cursor: pointer;
+      background: #2ea043; color: white; font-weight: 600;
+    }
+    button:hover { filter: brightness(1.05); }
+    .grid {
+      display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1rem; margin-top: 1rem;
+    }
+    .card {
+      background: #0f141a; border: 1px solid #1f2833; border-radius: 10px; padding: 1rem;
+    }
+    .thumb {
+      display: block; width: 100%; height: auto; border-radius: 8px; border: 1px solid #1f2833; background: #0b0f14;
+    }
+    .mono {
+      font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+      white-space: pre-wrap; word-break: break-word; background: #0b0f14;
+      padding: .75rem; border-radius: 8px; border: 1px solid #1f2833; color: #e6edf3;
+      min-height: 2.5rem;
+    }
+    .hint { color: #9aa7b1; font-size: .9rem; }
+    .error { color: #ff7b72; font-weight: 600; }
+    footer { margin-top: 1rem; color: #9aa7b1; font-size: .85rem; }
+  </style>
 </head>
 <body>
-<div class="container">
-  <h1>CAPTCHA OCR Decoder</h1>
-  <p class="helper">Upload a CAPTCHA image; the server will preprocess it and run OCR using Python pytesseract to extract the text.</p>
+  <div class="container">
+    <h1>CAPTCHA OCR Decoder</h1>
+    <p class="hint">Upload a CAPTCHA image to extract its text using Tesseract OCR.</p>
 
-  <form action="/" method="post" enctype="multipart/form-data">
-    <div class="row">
-      <input type="file" name="image" accept="image/*" required>
-    </div>
-    <div class="actions">
-      <button type="submit">Decode CAPTCHA</button>
-      <button type="reset" class="secondary">Reset</button>
-    </div>
+    <form method="post" enctype="multipart/form-data">
+      <input type="file" name="image" accept="image/*" required />
+      <button type="submit">Decode</button>
+    </form>
+
     {% if error %}
-      <div class="error">{{ error }}</div>
+      <p class="error">{{ error }}</p>
     {% endif %}
-  </form>
 
-  {% if text is not none %}
-    <div class="result">
-      <h2>Decoded Text</h2>
-      <div><strong>Result:</strong> <span style="font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace">{{ text if text.strip() else "(no text detected)" }}</span></div>
-    </div>
-  {% endif %}
+    {% if text is not none %}
+      <div class="grid">
+        {% if original_data_uri %}
+        <div class="card">
+          <h3>Original image</h3>
+          <img class="thumb" src="{{ original_data_uri }}" alt="Uploaded image preview" />
+        </div>
+        {% endif %}
+        {% if processed_data_uri %}
+        <div class="card">
+          <h3>Preprocessed for OCR</h3>
+          <img class="thumb" src="{{ processed_data_uri }}" alt="Preprocessed image preview" />
+        </div>
+        {% endif %}
+        <div class="card">
+          <h3>Decoded text</h3>
+          <div class="mono">{{ text if text.strip() else "(no text detected)" }}</div>
+        </div>
+      </div>
+    {% endif %}
 
-  {% if orig_b64 or proc_b64 %}
-  <div class="preview">
-    {% if orig_b64 %}
-    <div class="card">
-      <header>Original Image</header>
-      <div class="body">
-        <img class="preview-img" src="data:image/png;base64,{{ orig_b64 }}" alt="Original upload">
-      </div>
-    </div>
-    {% endif %}
-    {% if proc_b64 %}
-    <div class="card">
-      <header>Preprocessed Image</header>
-      <div class="body">
-        <img class="preview-img" src="data:image/png;base64,{{ proc_b64 }}" alt="Preprocessed for OCR">
-      </div>
-    </div>
-    {% endif %}
+    <footer>
+      Tip: High-contrast images with minimal noise yield better OCR. This demo uses single-line mode and a whitelist for alphanumerics.
+    </footer>
   </div>
-  {% endif %}
-
-  <footer>
-    Powered by Flask, Pillow, and pytesseract. For best results, upload a clear, single-line CAPTCHA with minimal background noise.
-  </footer>
-</div>
 </body>
 </html>
 """
@@ -109,46 +125,61 @@ def preprocess_for_captcha(img: Image.Image) -> Image.Image:
     g = img.convert("L")
     # Light denoise
     g = g.filter(ImageFilter.MedianFilter(size=3))
-    # Increase contrast
-    g = ImageOps.autocontrast(g)
-    # Binarize with a reasonable threshold
-    bw = g.point(lambda x: 0 if x < 140 else 255, mode="1")
-    # Convert back to 8-bit after binarization for pytesseract
-    return bw.convert("L")
+    # Simple thresholding to high-contrast B/W
+    # Adjust threshold if needed (120–170 range often works for CAPTCHAs)
+    threshold = 140
+    bw = g.point(lambda p: 255 if p > threshold else 0, mode='1')
+    # Convert back to 8-bit to ensure compatibility with tesseract
+    bw = bw.convert("L")
+    return bw
 
-def to_base64_png(img: Image.Image) -> str:
+def to_data_uri(img: Image.Image, fmt="PNG") -> str:
     buf = io.BytesIO()
-    img.save(buf, format="PNG")
-    return base64.b64encode(buf.getvalue()).decode("ascii")
+    img.save(buf, format=fmt)
+    b64 = base64.b64encode(buf.getvalue()).decode("ascii")
+    return f"data:image/{fmt.lower()};base64,{b64}"
 
 @app.route("/", methods=["GET", "POST"])
 def index():
-    text = None
     error = None
-    orig_b64 = None
-    proc_b64 = None
+    text = None
+    original_data_uri = None
+    processed_data_uri = None
 
     if request.method == "POST":
         file = request.files.get("image")
         if not file or file.filename == "":
-            error = "Please choose an image file before submitting."
+            error = "Please choose an image file."
         else:
-            try:
-                img = Image.open(file.stream).convert("RGB")
-                orig_b64 = to_base64_png(img)
+            if not (file.mimetype or "").startswith("image/"):
+                error = "Unsupported file type. Please upload an image."
+            else:
+                try:
+                    raw = file.read()
+                    original_img = Image.open(io.BytesIO(raw)).convert("RGB")
+                    processed_img = preprocess_for_captcha(original_img)
 
-                proc = preprocess_for_captcha(img)
+                    # Build data URIs for previews
+                    original_data_uri = to_data_uri(original_img, "PNG")
+                    processed_data_uri = to_data_uri(processed_img, "PNG")
 
-                # OCR configuration tailored for CAPTCHAs: single line, whitelist alphanumerics
-                config = "--oem 3 --psm 7 -c tessedit_char_whitelist=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
-                text = pytesseract.image_to_string(proc, config=config).strip()
-                proc_b64 = to_base64_png(proc)
-            except Exception as e:
-                error = f"Failed to process image: {e}"
+                    # Tesseract config: assume a single line of alphanumeric text
+                    config = (
+                        "--oem 3 --psm 7 "
+                        "-c tessedit_char_whitelist=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
+                    )
+                    text = pytesseract.image_to_string(processed_img, config=config)
+                except Exception as e:
+                    error = f"Failed to process image: {e}"
 
-    return render_template_string(HTML_TEMPLATE, text=text, error=error, orig_b64=orig_b64, proc_b64=proc_b64)
+    return render_template_string(
+        HTML,
+        error=error,
+        text=text,
+        original_data_uri=original_data_uri,
+        processed_data_uri=processed_data_uri,
+    )
 
 if __name__ == "__main__":
-    # Optional: respect PORT env var
-    port = int(os.environ.get("PORT", "5000"))
-    app.run(host="0.0.0.0", port=port, debug=False)
+    port = int(os.environ.get("PORT", "8000"))
+    app.run(host="0.0.0.0", port=port, debug=True)
